infra/k8s/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: sync
spec:
  selector:
    app: server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
